--- a/.github/workflows/az-app-service.yaml
+++ b/.github/workflows/az-app-service.yaml
@@ -2,7 +2,7 @@ name: "Deploy-App-Services"
 
 on:
   workflow_call:
-    inputs:
+    inputs:`
       AZURE_WEBAPP_NAME:  # set this to your function app name on Azure
         required: true
         type: string
@@ -23,12 +23,12 @@ jobs:
   build:
     runs-on: windows-latest
 
-    permissions:
-      id-token: write
-      contents: read
-      issues: read
-      checks: write
-      pull-requests: write
+    #permissions:
+    #  id-token: write
+    #  contents: read
+    #  issues: read
+    #  checks: write
+    #  pull-requests: write
 
     environment: ${{ inputs.ENVIRONMENT }}
     
