--- a/.github/workflows/az-app-service.yaml
+++ b/.github/workflows/az-app-service.yaml
@@ -27,12 +27,12 @@ jobs:
   build:
     runs-on: windows-latest
 
-    #permissions:
-    #  id-token: write
-    #  contents: read
-    #  issues: read
-    #  checks: write
-    #  pull-requests: write
+    permissions:
+      id-token: write
+      contents: read
+      issues: read
+      checks: write
+      pull-requests: write
 
     environment: ${{ inputs.ENVIRONMENT }}
     
