my first deployment

--- a/.github/workflows/call.yaml
+++ b/.github/workflows/call.yaml
@@ -12,7 +12,7 @@ jobs:
       AZURE_WEBAPP_NAME: 'TestMyFirstApp'
       AZURE_WEBAPP_PACKAGE_PATH: '.'
       DOTNET_VERSION: '8.x'
-      ENVIRONMENT: 'DEV'
+      ENVIRONMENT: 'Production'
     secrets:
       AZUREAPPSERVICE_CLIENTID: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4B06DC58D8904564BD30611BA49E2BE2 }}
       AZUREAPPSERVICE_TENANTID: ${{ secrets.AZUREAPPSERVICE_TENANTID_DA23E658C72D4026911E1005A0536E0B }}
